 - Added /GETSTR and /GETINT.
 - Misc. serverlist bug fixes (Shaun Guth).
 - Added xchat_get_info("network") to plugin interface.
 - Fixed changing tabs via keyboard.
 - Added a few keyboard accelerators to the menubar.
 - Fixed close-tab-0 crash.
 - Fixed /unload <plugin_file_name> crash.
 - Fixed userlist popup menu disappearing on button-release.
 - 
 - 


----------------------------------------------------------------------
 1.9.6
----------------------------------------------------------------------

 - Updated Spanish translation (Pablo del Campo).
 - Added Estonian translation (Ilmar Kerm).
 - Made switching to dialog tabs faster:
   * Draw xtext only once when switching to a dialog tab.
   * Do not recalculate the tinted-transparency.
 - Fixed another text-off-the-bottom bug.
 - Fixed background color other than black not working.
 - Fixed dialog windows not being logged (Joanne Hunter).
 - Fixed topic entry box going blank bug.
 - Added Insert-color-code and encoding submenu in the bottom-right
   button.
 - Apply more settings without needing a restart:
   * Background image.
   * Time stamp text on/off.
   * Palette changes.
 - Implemented %n for log-filename-mask.
 - Reconfigured the menubar a bit.
 - Validate inbound utf8 text to avoid reading beyond buffer and
   fall back to iso-8859-1.
 - win32 compile fixes.
 - Don't convert commas to %2c in urls.
 - Auto open dialog when dcc chat offer connects (Steve Green).
 - Make setting "Open Utilities in: Windows" work.
 - Added a way to reorder networks in the serverlist window (still
   want to add DND later).


----------------------------------------------------------------------
 1.9.5
----------------------------------------------------------------------

 - Fixed the PL_perl_destruct_level crash (Bernard Blackham).
 - Fixed the perl readdir crash.
 - Added tab scrolling buttons (Lloyd Williams).
 - Added DCC throttle and better CPS calculation (Richard Fuchs).